# easy-gemini-agent-engine

./: .gcloudignore  .gitignore  README.md  pyproject.toml
cloud-run-oauth-callback/: deploy.sh  main.py  requirements.txt
docs/.adk/: session.db
docs/plans/: 2026-03-09-easy-gemini-agent-engine-design.md  2026-03-09-easy-gemini-agent-engine-impl.md  2026-03-09-google-workspace-integration-design.md  2026-03-09-google-workspace-integration-impl.md
gemini_agent/: agent.py  workspace.py
gemini_agent/.adk/: session.db
gemini_agent/workspace/: auth.py  docs_tools.py  drive_tools.py  sheets_tools.py  slides_tools.py
scripts/: cleanup_agent_engines.py  deploy_agent_engine.py  setup_gcp_prerequisites.sh  test_agent_engine.py
tests/workspace/: test_auth.py  test_docs_tools.py  test_drive_tools.py  test_sheets_tools.py  test_slides_tools.py
